--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -39,6 +39,8 @@
       href: security-center-enable-data-collection.md
     - name: メール通知の設定
       href: security-center-provide-security-contact-details.md
+    - name: ARM テンプレートを使用してアラートへの自動応答を作成する
+      href: quickstart-automation-alert.md
 - name: チュートリアル
   items:
     - name: 計画と運用のガイド
