--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -141,7 +141,7 @@
           href: uptime-sla.md
         - name: 近接配置グループの使用 (プレビュー)
           href: reduce-latency-ppg.md
-        - name: ノード イメージのアップグレード (プレビュー)
+        - name: ノード イメージのアップグレード
           href: node-image-upgrade.md
         - name: ノードの OS の更新プログラムの処理
           href: node-updates-kured.md
