commit translated contents

--- a/articles/data-share/TOC.yml
+++ b/articles/data-share/TOC.yml
@@ -8,6 +8,8 @@
       href: supported-data-stores.md
 - name: クイックスタート
   items:
+    - name: データ共有の作成 - Azure portal
+      href: share-your-data-portal.md
     - name: データ共有の作成 - ARM テンプレート
       displayName: Resource Manager
       href: share-your-data-arm.md
@@ -52,6 +54,9 @@
       href: security.md
     - name: 障害復旧
       href: disaster-recovery.md
+    - name: Azure Data Explorer のデータの共有
+      href: /azure/data-explorer/data-share
+      maintainContext: true
 - name: リファレンス
   items:
     - name: .NET
