--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -8,19 +8,41 @@
       displayName: release notes
       href: release-notes.md
 - name: クイックスタート
-  expanded: true
   items:
-    - name: ポータルと Wirecast を使用したライブ イベント
-      displayName: 'live, event, portal, wirecast'
-      href: live-events-wirecast-quickstart.md
-    - name: ポータルと OBS を使用したライブ イベント
-      displayName: 'live, event, portal, obs'
-      href: live-events-obs-quickstart.md
-    - name: ポータルを使用したコンテンツのアップロード、エンコード、ストリーム配信
-      href: manage-assets-quickstart.md
-    - name: ポータルを使用したコンテンツの暗号化
-      displayName: 'protect, drm, aes'
-      href: encrypt-content-quickstart.md
+    - name: 環境を設定する
+      items:
+        - name: Azure サブスクリプションを検索する
+          href: how-to-set-azure-subscription.md
+        - name: Media Services アカウントを作成する
+          href: create-account-howto.md
+        - name: API にアクセスする
+          href: access-api-howto.md
+        - name: Azure Cloud Shell を設定する
+          href: 'https://docs.microsoft.com/azure/cloud-shell/overview'
+        - name: REST を使用した開発
+          items:
+            - name: Postman を使用して接続する
+              href: media-rest-apis-with-postman.md
+        - name: SDK を使用した開発
+          items:
+            - name: Java を使用して接続する
+              href: configure-connect-java-howto.md
+            - name: .NET を使用して接続する
+              href: configure-connect-dotnet-howto.md
+            - name: Node.js を使用して接続する
+              href: configure-connect-nodejs-howto.md
+            - name: Python を使用して接続する
+              href: configure-connect-python-howto.md
+    - name: Azure portal で Media Services を試す
+      items:
+        - name: ポータルと Wirecast を使用したライブ イベント
+          href: live-events-wirecast-quickstart.md
+        - name: ポータルと OBS を使用したライブ イベント
+          href: live-events-obs-quickstart.md
+        - name: ポータルを使用したコンテンツのアップロード、エンコード、ストリーム配信
+          href: manage-assets-quickstart.md
+        - name: ポータルを使用したコンテンツの暗号化
+          href: encrypt-content-quickstart.md
 - name: チュートリアル
   items:
     - name: リモート ファイルのエンコードとビデオのストリーム配信
@@ -56,6 +78,7 @@
     - name: Media Services v3 の REST サンプル
       href: 'https://github.com/Azure-Samples/media-services-v3-rest-postman'
 - name: 概念
+  expanded: true
   items:
     - name: 概要
       href: concepts-overview.md
@@ -207,6 +230,8 @@
               href: live-event-error-codes.md
             - name: ジョブ エラー コード
               href: job-error-codes.md
+        - name: アカウントの資格情報をリセットする
+          href: cli-reset-account-credentials.md
     - name: v2 から v3 への移行
       items:
         - name: v2 と v3 の比較
@@ -217,70 +242,30 @@
           displayName: naming
 - name: 操作方法ガイド
   items:
-    - name: はじめに
-      items:
-        - name: Azure サブスクリプションを検索する
-          href: how-to-set-azure-subscription.md
-        - name: Media Services アカウントを作成する
-          href: create-account-howto.md
-          displayName: 'portal, cli, storage'
-        - name: API へのアクセス
-          displayName: 'portal, cli'
-          href: access-api-howto.md
-        - name: REST を使用した開発
-          items:
-            - name: Postman を使用して接続する
-              href: media-rest-apis-with-postman.md
-        - name: SDK を使用した開発
-          items:
-            - name: Java を使用して接続する
-              href: configure-connect-java-howto.md
-            - name: .NET を使用して接続する
-              href: configure-connect-dotnet-howto.md
-            - name: Node.js を使用して接続する
-              href: configure-connect-nodejs-howto.md
-            - name: Python を使用して接続する
-              href: configure-connect-python-howto.md
-        - name: アカウントの資格情報をリセットする
-          href: cli-reset-account-credentials.md
-    - name: アセットの作成と管理
+    - name: アセットの作成とメディアのアップロード
       items:
         - name: アセットを作成する
           href: how-to-create-asset.md
-    - name: コンテンツをアップロードする
-      items:
-        - name: HTTPS から
-          displayName: upload
-          href: job-input-from-http-how-to.md
-        - name: ローカル ファイルから
-          items:
-            - name: .NET の場合
-              displayName: upload
-              href: job-input-from-local-file-how-to.md
-            - name: REST の場合
-              displayName: upload
-              href: upload-files-rest-how-to.md
-            - name: CLI の場合
-              href: cli-upload-file-asset.md
+        - name: メディアをアップロードする
+          href: how-to-upload-media.md
     - name: 変換とジョブの作成
       items:
         - name: 変換を作成する
           href: cli-create-transform.md
         - name: ジョブを作成する
           href: cli-create-jobs.md
+        - name: ローカル ファイルと .NET を使用してジョブ入力を作成する
+          displayName: upload
+          href: job-input-from-local-file-how-to.md
         - name: 複数の変換出力を含むジョブ
           href: job-multiple-transform-outputs.md
     - name: コンテンツのエンコード
       items:
         - name: ジョブ入力としての HTTPS
-          displayName: 'encode, encoding'
           href: job-input-from-http-how-to.md
         - name: ジョブ入力としてのローカル ファイル
-          displayName: 'encode, encoding'
           href: job-input-from-local-file-how-to.md
         - name: カスタム変換を使用してエンコードする
-        - name: メディア占有ユニットをスケーリングする
-          href: media-reserved-units-cli-how-to.md
           items:
             - name: .NET の場合
               displayName: 'encode, encoding, custom, transform'
@@ -299,6 +284,8 @@
               href: custom-preset-rest-howto.md
             - name: REST を使用してサムネイルを生成する
               href: media-services-generate-thumbnails-rest.md
+            - name: メディア占有ユニットをスケーリングする
+              href: media-reserved-units-cli-how-to.md
         - name: ビデオをサブクリップする
           items:
             - name: .NET の場合
