--- a/articles/cognitive-services/form-recognizer/toc.yml
+++ b/articles/cognitive-services/form-recognizer/toc.yml
@@ -34,6 +34,10 @@
               href: quickstarts/curl-receipts.md
             - name: Python
               href: quickstarts/python-receipts.md
+        - name: あらかじめ構築された名刺モデルを使用する
+          items:
+            - name: Python
+              href: quickstarts/python-business-cards.md
         - name: テキスト レイアウト情報を取得する
           items:
             - name: Python
@@ -44,6 +48,12 @@
       href: 'https://docs.microsoft.com/azure/search/cognitive-search-custom-skill-form'
     - name: AI Builder で Form Recognizer を使用する
       href: tutorial-ai-builder.md
+- name: 概念
+  items:
+    - name: Receipts
+      href: concept-receipts.md
+    - name: 名刺
+      href: concept-business-cards.md
 - name: 操作方法ガイド
   items:
     - name: トレーニング データ セットの作成
@@ -64,6 +74,8 @@
       href: disaster-recovery.md
 - name: リファレンス
   items:
+    - name: Form Recognizer API v2.1 プレビュー
+      href: 'https://westcentralus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2-1-preview-1/operations/AnalyzeBusinessCardAsync'
     - name: Form Recognizer API v2.0
       href: 'https://westus2.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2/operations/AnalyzeWithCustomForm'
     - name: SDK
