commit translated contents

--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -41,7 +41,7 @@
 - name: サンプル
   items:
     - name: コード サンプル
-      href: 'https://azure.microsoft.com/resources/samples/?sort=0&term=aci'
+      href: 'https://docs.microsoft.com/samples/browse/?products=azure&terms=container%20instance'
     - name: Resource Manager テンプレート
       href: container-instances-samples-rm.md
 - name: 概念
