--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -195,7 +195,7 @@
     - name: 概要
       href: ../managed-disks-overview.md
     - name: よく寄せられる質問
-      href: ../windows/faq-for-disks.md
+      href: ../faq-for-disks.md
     - name: ストレージ リソースの削除時のエラー
       href: storage-resource-deletion-errors.md
     - name: クラシック ストレージ リソースの削除時のエラー
