--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -510,6 +510,8 @@
           href: unique-keys.md
         - name: トランザクションとオプティミスティック同時実行制御
           href: database-transactions-optimistic-concurrency.md
+        - name: '[Attachments]'
+          href: attachments.md
     - name: Change Feed
       items:
         - name: 変更フィードの概要
