--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: nitinme
   manager: nitinme
   ms.date: 03/24/2020
-  ms.openlocfilehash: 18c854389122c7e05a84ea0fd42b0cd2fd0c4c1c
-  ms.sourcegitcommit: f844603f2f7900a64291c2253f79b6d65fcbbb0c
+  ms.openlocfilehash: 938d54981a8605b28f745c1ae3d6722a644c0320
+  ms.sourcegitcommit: 927dd0e3d44d48b413b446384214f4661f33db04
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 07/10/2020
-  ms.locfileid: "86224368"
+  ms.lasthandoff: 08/26/2020
+  ms.locfileid: "88869917"
 highlightedContent:
   items:
   - title: Cognitive Services とは
@@ -71,7 +71,7 @@ conceptualContent:
     links:
     - url: ./immersive-reader/index.yml
       itemType: overview
-      text: Immersive Reader (プレビュー)
+      text: イマーシブ リーダー
     - url: ./luis/index.yml
       itemType: overview
       text: Language Understanding (LUIS)
@@ -83,7 +83,7 @@ conceptualContent:
       text: Text Analytics
     - url: ./translator/index.yml
       itemType: overview
-      text: Translator
+      text: '[変換者]'
   - title: 音声
     summary: 音声をテキストに変換し、テキストを自然な音声に変換します。 ある言語を別の言語に翻訳し、話者の認証と認識を可能にします。
     links:
