--- a/articles/azure-app-configuration/index.yml
+++ b/articles/azure-app-configuration/index.yml
@@ -9,12 +9,12 @@ metadata:
   ms.service: azure-app-configuration
   ms.topic: landing-page
   ms.date: 02/03/2020
-  ms.openlocfilehash: abeb409ae213768f52194401933e0ae7afb53741
-  ms.sourcegitcommit: 3bf69c5a5be48c2c7a979373895b4fae3f746757
+  ms.openlocfilehash: 4896271a1ac03fba688bd7159cdd8452f0cc59dc
+  ms.sourcegitcommit: 419cf179f9597936378ed5098ef77437dbf16295
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/14/2020
-  ms.locfileid: "88234807"
+  ms.lasthandoff: 08/27/2020
+  ms.locfileid: "89021019"
 landingContent:
 - title: Azure App Configuration について
   linkLists:
@@ -133,7 +133,7 @@ landingContent:
     - text: Azure SDK for .Net
       url: https://go.microsoft.com/fwlink/?linkid=2092056
     - text: Spring Boot プロバイダー
-      url: https://go.microsoft.com/fwlink/?linkid=2074659
+      url: https://github.com/microsoft/spring-cloud-azure/tree/master/
     - text: Azure SDK for Java
       url: https://go.microsoft.com/fwlink/?linkid=2098196
     - text: Azure SDK for Python
