--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -5,7 +5,7 @@
   items:
     - name: Machine Learning Studio (クラシック)
       displayName: overview
-      href: what-is-ml-studio.md
+      href: studio-classic-overview.md
     - name: Microsoft の ML 製品の比較
       href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/studio/context/ml-context
 - name: クイックスタート
