--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -96,6 +96,8 @@
       href: language-packs.md
 - name: 概念
   items:
+    - name: 認証
+      href: authentication.md
     - name: 安全な URL リスト
       href: safe-url-list.md
     - name: Windows Virtual Desktop の環境
