--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -558,10 +558,18 @@ groups:
     title: Linux コンテナー
   - id: container-windows
     title: Windows コンテナー
+- id: programming-languages-spring-cloud
+  title: プログラミング言語
+  prompt: プログラミング言語を選択する
+  pivots:
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-csharp
+    title: C#
 metadata:
-  ms.openlocfilehash: e9997400e1ed6708889f5f9f70078f5d3ec4c282
-  ms.sourcegitcommit: 56cbd6d97cb52e61ceb6d3894abe1977713354d9
+  ms.openlocfilehash: 0659c68f39493c3e3b2e66ebc5a38d96cd13404d
+  ms.sourcegitcommit: 419cf179f9597936378ed5098ef77437dbf16295
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/20/2020
-  ms.locfileid: "88691209"
+  ms.lasthandoff: 08/27/2020
+  ms.locfileid: "88998919"
